# whisper-api

./: .env-example  .pre-commit-config.yaml  README.md  docker-compose-prod.yaml  docker-compose.yaml
compose/: docker-compose-prod.yaml  docker-compose.yaml
src/: .dockerignore  Dockerfile  app.py  entrypoint.sh  gunicorn.conf.py  pyproject.toml
src/api/: .gitignore  app.py  utils.py
src/api/templates/: index.html  transcribe.html
src/api/tests/: test.py
src/api/worker/: initialization.py  tasks.py  utils.py
