[tool.poetry]
name = "whisper-api"
version = "0.0"
description = ""
authors = ["Matthieu Mérigot-Lombard"]

[tool.poetry.dependencies]
python = "3.11.6"
flask = "^2.0.2"
gunicorn = "22.0.0"
openai-whisper = { git = "https://github.com/openai/whisper.git" }
celery = "^5.2.7"
redis = "^5.0.1"

[tool.poetry.dev-dependencies]