[tool.poetry]
name = "whisper-api"
version = "0.2"
description = "Small Whisper API with a queue system using Celery "
authors = ["Matthieu Mérigot-Lombard"]

[tool.poetry.dependencies]
python = "3.12.6"
flask = "3.0.3"
gunicorn = "23.0.0"
openai-whisper = "20240930"
celery = "5.4.0"
redis = "5.1.0"
llvmlite = "0.43.0"
numba = "0.60.0"
flower = "2.0.1"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]